--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
+browser.id=Chromium
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=/var/www/PhpProject1
-index.file=index.php
 run.as=LOCAL
-url=http://localhost/html/blogcodeigniter/
+url=http://localhost/blogcodeigniter/
